@@ -5,6 +5,7 @@ Trevius: RoF: Corrected multiple opcodes.
 Trevius: RoF: #finditem now displays itemlinks correctly.
 Trevius: RoF: Started work/testing to get Tasks functioning. Don't click tasks in the history tab or client will freeze.
 Trevius: Added some possible crash fixes.
+Bad_Captain: Mercs - temp fix for possible crash when dying with RespawnFromHover on, fixed infinite stats (buffs continually adding to stats).
 
 == 01/09/2013 ==
 Derision: RoF: Corrected LDoN merchant opcodes, added encode for OP_AdventureMerchantSell. Updated PP with available LDoN points.
